--- a/index.html
+++ b/index.html
@@ -21,12 +21,16 @@
             text-align: center;
             font-family: Arial, sans-serif;
         }
+        #gameContainer, #startButton, #memoryGameContainer, #middlePage {
+            display: none; /* 처음에는 숨겨진 상태 */
+            flex-direction: column;
+            align-items: center;
+        }
         #memoryGameContainer {
             display: grid;
             grid-template-columns: repeat(4, 60px); /* 카드 크기를 줄임 */
             grid-gap: 10px;
             margin-top: 20px;
-            visibility: hidden;
         }
         #memoryGameContainer div {
             background-color: white; /* 카드 색상을 흰색으로 변경 */
@@ -65,6 +69,15 @@
         <button onclick="checkPassword()">확인</button>
     </div>
 
+    <!-- 중간 페이지 -->
+    <div id="middlePage">
+        <p>전체적인 기억을 빨리 찾고 싶다...<br>
+        너무 답답해...<br>
+        조금 구시대적인 방법이지만<br>
+        머리를 조금 흔들어보면 기억이 나지 않을까...</p>
+        <button onclick="startMemoryGame()">다음</button>
+    </div>
+
     <!-- 기억력 게임 섹션 -->
     <div id="memoryGameContainer">
         <!-- 4x8 그리드 생성 -->
@@ -83,9 +96,8 @@
         function checkPassword() {
             const password = document.getElementById("passwordInput").value;
             if (password === "2076") {
-                document.getElementById("memoryGameContainer").style.visibility = "visible"; // 기억력 게임 보이기
+                document.getElementById("middlePage").style.display = "flex"; // 중간 페이지 표시
                 document.getElementById("initialMessage").style.display = "none"; // 비밀번호 입력 숨기기
-                startMemoryGame();
             } else {
                 alert("비밀번호가 틀렸습니다. 다시 시도하세요.");
             }
@@ -93,6 +105,8 @@
 
         // 기억력 게임 초기화 함수
         function startMemoryGame() {
+            document.getElementById("middlePage").style.display = "none"; // 중간 페이지 숨기기
+            document.getElementById("memoryGameContainer").style.display = "grid"; // 기억력 게임 표시
             shuffledCards = shuffle(cardValues.slice());
             const container = document.getElementById('memoryGameContainer');
             container.innerHTML = '';
