--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
     </div>
 
     <script>
-        const cardValues = ['🍎', '🍊', '🍇', '🍌', '🍉', '🍍', '🍒', '🍓', '🍎', '🍊', '🍇', '🍌', '🍉', '🍍', '🍒', '🍓',
-                            '🥑', '🥥', '🍋', '🍐', '🍑', '🍒', '🍈', '🍏', '🥑', '🥥', '🍋', '🍐', '🍑', '🍒', '🍈', '🍏'];
+        const cardValues = ['🍎', '🍊', '🍇', '🍌', '🍉', '🍍', '🍒', '🍓', '🍋', '🍐', '🥭', '🍑', '🍈', '🍏', '🍅', '🥝',
+                            '🍎', '🍊', '🍇', '🍌', '🍉', '🍍', '🍒', '🍓', '🍋', '🍐', '🥭', '🍑', '🍈', '🍏', '🍅', '🥝'];
         let shuffledCards = [];
         let firstCard = null;
         let secondCard = null;
