--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
 
     <!-- 중간 페이지 -->
     <div id="middlePage">
-        <p>전체적인 기억을 빨리 찾고 싶다...<br>
-        너무 답답해...<br>
-        조금 구시대적인 방법이지만<br>
-        머리를 조금 흔들어보면 기억이 나지 않을까...</p>
+        <p>이제 다왔어...!<br>
+        기억력 테스트로 내 뇌를 활성화시키면<br>
+        다 기억이 날꺼야<br>
+        머리가 조금 아프지만 나를 위해 해보자...!</p>
         <button onclick="startMemoryGame()">다음</button>
     </div>
 
